src/app/issues-viewer/card-view/card-view.component.css
.card-column {
  margin: 8px;
}

.card {
  margin: 8px 0px 8px 0px;
}

.mat-card-title {
  display: flex;
  align-items: center;
  font-size: 12px;
  text-align: left;
  overflow: auto;
}

.column-header .mat-card-title {
  font-size: 14px;
}

.mat-card {
  padding: 10px;
}

:host ::ng-deep div.mat-card-header-text {
  margin: 2px;
}

div.column-header .mat-card-title {
  justify-content: center;
  margin: 0;
}

div.column-header {
  justify-content: center;
}

div.column-header .mat-card-header {
  display: flex;
  align-items: center;
  justify-content: center;
}

.mat-card-content {
  height: 53vh;
  overflow: auto;
  margin-bottom: 2px;
}

.mat-card-subtitle {
  display: flex;
  align-items: center;
  font-size: 11px;
  text-align: left;
  overflow: auto;
  margin: 6px 0;
}

.row-count {
  background-color: rgb(222, 222, 222);
  border-radius: 3px;
  cursor: default;
  padding: 6px;
  color: rgb(0, 0, 0);
  font-weight: 410;
  display: inline-flex;
  font-size: 14px;
}

